# vulkans

./: AUTHORS  INSTALL  Makefile.am  NEWS  README  TODO  configure  configure.in  gnome-tesserae.spec  gnome-tesserae.spec.in
go/simple-examples/: go.mod  go.sum  main.go
helloworld/: main.cpp
help/: Makefile.in
help/C/: Makefile.am
pixmaps/: Makefile.am  Makefile.in
src/: Makefile.am  custom-highscore-dialog.c  custom-highscore-dialog.h  main.c  move-utils.h  new-game.h  properties.c  properties.h  score.c  undo-utils.c  undo-utils.h
tesserae/: Makefile.in  aclocal.m4  confdefs.h  gnome-tesserae.desktop  mkinstalldirs
tesserae/help/: Makefile.am
tesserae/help/C/: Makefile.in  index.html
tesserae/macros/: Makefile.in
tesserae/sounds/: Makefile.am  Makefile.in
tesserae/src/: Makefile.in  board-utils.c  board-utils.h  gnome-tesserae.h  move-utils.c  new-game.c  score.h
