AC_INIT(src/main.c)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(gnome-tesserae, 1.4.0)

AM_MAINTAINER_MODE

AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM
AM_PROG_LIBTOOL

GNOME_COMPILE_WARNINGS

# I wish...
# ALL_LINGUAS="da de es fr gl nl no pl ru sv fi uk"

ALL_LINGUAS=""

# Add this again after we get gettextize working.
#AM_GNU_GETTEXT

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

# Add these back in after we figure out
# why gettextize keeps failing.
# intl/Makefile
# po/Makefile.in

AC_OUTPUT([
gnome-tesserae.spec
Makefile
macros/Makefile
src/Makefile
pixmaps/Makefile
sounds/Makefile
help/Makefile
help/C/Makefile
])