gnome_tesserae_helpdir = $(datadir)/gnome/help/gnome-tesserae/C

figures = \
	starting-mosaic.png \
	proposed-first-jump.png \
	first-jump.png \
	composite-problem-1.png \
	composite-problem-2.png \
	composite-problem-3.png \
	composite-problem-4.png

gnome_tesserae_help_DATA = \
	$(figures) \
	index.html \
	topic.dat

EXTRA_DIST = $(gnome_tesserae_help_DATA)